cmake improvements for fixing #313

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 
 option ( TBB_PARALLEL "Use tbb::parallel for prarticle and skinning acceleration on SMP." ON )
 option ( NO_TBB_MALLOC "Use standard memory allocation instead of tbbmalloc" ON )
+option(USING_OWN_TBB "Using specific tbb version from OpenXRay" ON)
 
 include(cotire)
 
@@ -107,21 +108,37 @@ add_definitions(-DdSINGLE) # for ODE
 set(LUA_INCLUDE_DIR Externals/LuaJIT/src)
 
 if (NOT WIN32)
-find_package(GLEW REQUIRED)
-find_package(FreeImage REQUIRED)
-find_package(LockFile REQUIRED)
-find_package(OpenAL REQUIRED)
-find_package(Crypto++ REQUIRED)
-find_package(Theora REQUIRED)
-find_package(OGG REQUIRED)
-find_package(SDL2 REQUIRED)
-find_package(LZO REQUIRED)
-find_package(JPEG REQUIRED)
-find_package(TBB REQUIRED)
+    set(CRYPTOPP_EXCLUDES ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
+    set(TBB_EXCLUDES ${CMAKE_SOURCE_DIR}/sdk/include/tbb)
+    set(TBB_SERIAL_EXCLUDES ${CMAKE_SOURCE_DIR}/sdk/include/serial/tbb)
+    find_package(GLEW REQUIRED)
+    find_package(FreeImage REQUIRED)
+    find_package(LockFile REQUIRED)
+    find_package(OpenAL REQUIRED)
+    find_package(Crypto++ REQUIRED)
+    find_package(Theora REQUIRED)
+    find_package(OGG REQUIRED)
+    find_package(SDL2 REQUIRED)
+    find_package(LZO REQUIRED)
+    find_package(JPEG REQUIRED)
+    find_package(TBB REQUIRED)
 endif()
 
 include_directories(${LUA_INCLUDE_DIR})
-include_directories(${CMAKE_SOURCE_DIR} {CMAKE_SOURCE_DIR}/Common ${CMAKE_SOURCE_DIR}/Externals ${CMAKE_SOURCE_DIR}/Externals/gli/external/glm ${CMAKE_SOURCE_DIR}/../sdk/include/loki)
+include_directories(${CMAKE_SOURCE_DIR}/src/Common)
+include_directories(${CMAKE_SOURCE_DIR}/Externals/gli/external/glm)
+include_directories(${CMAKE_SOURCE_DIR}/Externals)
+include_directories(${CMAKE_SOURCE_DIR}/../sdk/include/loki)
+
+
+if (USING_OWN_TBB)
+   include_directories(${CMAKE_SOURCE_DIR}/sdk/include)
+   unset(TBB_EXCLUDES ${CMAKE_SOURCE_DIR}/sdk/include/tbb)
+   unset(TBB_SERIAL_EXCLUDES ${CMAKE_SOURCE_DIR}/sdk/include/serial/tbb)
+endif()
 
 add_subdirectory(Externals)
 add_subdirectory(src)
+add_subdirectory(EXCLUDE_FROM_ALL ${TBB_EXCLUDES})
+add_subdirectory(EXCLUDE_FROM_ALL ${CRYPTOPP_EXCLUDES})
+add_subdirectory(EXCLUDE_FROM_ALL ${TBB_SERIAL_EXCLUDES})
