cmake improvements2 for fixing #313

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ if (NOT WIN32)
     find_package(LZO REQUIRED)
     find_package(JPEG REQUIRED)
     find_package(TBB REQUIRED)
+    find_package(PCRE REQUIRED)
 endif()
 
 if (USING_OWN_TBB)
@@ -129,7 +130,7 @@ include_directories(${LUA_INCLUDE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src/Common)
 include_directories(${CMAKE_SOURCE_DIR}/Externals/gli/external/glm)
 include_directories(${CMAKE_SOURCE_DIR}/Externals)
-include_directories(${CMAKE_SOURCE_DIR}/../sdk/include/loki)
+include_directories(${CMAKE_SOURCE_DIR}/sdk/include/loki)
 
 add_subdirectory(Externals)
 add_subdirectory(src)
