--- a/src/xr_3da/xr_3da.vcxproj.filters
+++ b/src/xr_3da/xr_3da.vcxproj.filters
@@ -28,6 +28,9 @@
     <Image Include="stalker_cs.ico">
       <Filter>resources</Filter>
     </Image>
+    <Image Include="splash_xrcs_ru.bmp">
+      <Filter>resources</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\TypeHelper.natvis" />
